kustomize/overlays/production/item-flow/pixta-uploader/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixta-uploader
  labels:
    app: pixta-uploader
    stage: production
spec:
  replicas: 0
  selector:
    matchLabels:
      app: pixta-uploader
      stage: production
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pixta-uploader
        stage: production
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::567351176096:role/pixta-uploader
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: eks.amazonaws.com/capacityType
                    operator: In
                    values:
                      - ON_DEMAND
                  - key: data-transfer-worker
                    operator: In
                    values:
                      - "true"
              weight: 10
