kustomize/overlays/production/item-flow/pixta-uploader/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixta-uploader-svc
spec:
  selector:
    app: pixta-uploader
    stage: production
